# libgeohex

./: CMakeLists.txt  Dockerfile  LICENSE  ci.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
include/geohex/: compat.h  geohex.h
src/: geohex.c
tests/: geohex_private.h  json_data.h  test_geohex.c
